subdir('ssids')
subdir('ssmfe')

spral_tests += [['lsmrt', files('lsmr.f90')],
                ['randomt', files('random.f90')],
                ['random_matrixt', files('random_matrix.f90')],
                ['rutherford_boeingt', files('rutherford_boeing.f90')],
                ['scalingt', files('scaling.f90')]]
