subdir('ssids')
subdir('ssmfe')

spral_tests += [['lsmr', 'lsmrt', files('lsmr.f90')],
                ['random', 'randomt', files('random.f90')],
                ['random', 'random_matrixt', files('random_matrix.f90')],
                ['rb', 'rutherford_boeingt', files('rutherford_boeing.f90')],
                ['scaling', 'scalingt', files('scaling.f90')]]

spral_c_tests += [['spral', 'versiont_c', files('version.c')]]
