subdir('rutherford_boeing')
subdir('scaling')
subdir('ssmfe')

spral_c_examples += [['lsmr', 'lsmrs_c', files('lsmr.c')],
                     ['random', 'randoms_c', files('random.c')],
                     ['random', 'random_matrixs_c', files('random_matrix.c')],
                     ['ssids', 'ssidss_c', files('ssids.c')],
                     ['ssids', 'ssids_topologys_c', files('ssids_topology.c')]]
