subdir('rutherford_boeing')
subdir('scaling')
subdir('ssmfe')

spral_examples += [['lsmr', 'lsmrs', files('lsmr.f90')],
                   ['random', 'randoms', files('random.f90')],
                   ['random', 'random_matrixs', files('random_matrix.f90')],
                   ['ssids', 'ssidss', files('ssids.f90')]]
