subdir('cpu')
subdir('gpu')

libspral_src += files('akeep.f90',
                      'anal.F90',
                      'contrib.f90',
                      'contrib_free.f90',
                      'datatypes.f90',
                      'fkeep.F90',
                      'inform.f90',
                      'profile_iface.f90',
                      'ssids.f90',
                      'subtree.f90')

libspral_cpp_src += files('profile.cxx')
