spral_tests += [['ssidst', files('ssids.f90')]]

spral_cpp_tests += [['kernelst_cpp', files('kernels.cxx', 'kernels/block_ldlt.cxx', 'kernels/cholesky.cxx',
                                           'kernels/framework.cxx', 'kernels/ldlt_app.cxx',
                                           'kernels/ldlt_nopiv.cxx', 'kernels/ldlt_tpp.cxx')]]
