spral_c_examples += [['auction_syms_c', files('auction_sym.c')],
                     ['auction_unsyms_c', files('auction_unsym.c')],
                     ['equilib_syms_c', files('equilib_sym.c')],
                     ['equilib_unsyms_c', files('equilib_unsym.c')],
                     ['hungarian_syms_c', files('hungarian_sym.c')],
                     ['hungarian_unsyms_c', files('hungarian_unsym.c')]]
