spral_c_examples += [['scaling', 'auction_syms_c', files('auction_sym.c')],
                     ['scaling', 'auction_unsyms_c', files('auction_unsym.c')],
                     ['scaling', 'equilib_syms_c', files('equilib_sym.c')],
                     ['scaling', 'equilib_unsyms_c', files('equilib_unsym.c')],
                     ['scaling', 'hungarian_syms_c', files('hungarian_sym.c')],
                     ['scaling', 'hungarian_unsyms_c', files('hungarian_unsym.c')]]
