if has_cblash
  spral_c_examples += [['hermitians_c', files('hermitian.c')],
                       ['precond_cores_c', files('precond_core.c')],
                       ['precond_experts_c', files('precond_expert.c')],
                       ['precond_ssmfes_c', files('precond_ssmfe.c')],
                       ['shift_inverts_c', files('shift_invert.c')]]
endif
