if has_cblash
  spral_c_examples += [['ssmfe', 'hermitians_c', files('hermitian.c')],
                       ['ssmfe', 'precond_cores_c', files('precond_core.c')],
                       ['ssmfe', 'precond_experts_c', files('precond_expert.c')],
                       ['ssmfe', 'precond_ssmfes_c', files('precond_ssmfe.c')],
                       ['ssmfe', 'shift_inverts_c', files('shift_invert.c')]]
endif
