spral_examples += [['auction_syms', files('auction_sym.f90')],
                   ['auction_unsyms', files('auction_unsym.f90')],
                   ['equilib_syms', files('equilib_sym.f90')],
                   ['equilib_unsyms', files('equilib_unsym.f90')],
                   ['hungarian_syms', files('hungarian_sym.f90')],
                   ['hungarian_unsyms', files('hungarian_unsym.f90')]]
