spral_examples += [['scaling', 'auction_syms', files('auction_sym.f90')],
                   ['scaling', 'auction_unsyms', files('auction_unsym.f90')],
                   ['scaling', 'equilib_syms', files('equilib_sym.f90')],
                   ['scaling', 'equilib_unsyms', files('equilib_unsym.f90')],
                   ['scaling', 'hungarian_syms', files('hungarian_sym.f90')],
                   ['scaling', 'hungarian_unsyms', files('hungarian_unsym.f90')]]
