spral_examples += [['hermitians', files('hermitian.f90')],
                   ['precond_cores', files('precond_core.f90', 'laplace2d.f90')],
                   ['precond_experts', files('precond_expert.f90', 'laplace2d.f90')],
                   ['precond_ssmfes', files('precond_ssmfe.f90', 'laplace2d.f90')],
                   ['shift_inverts', files('shift_invert.f90', 'laplace2d.f90', 'ldltf.f90')]]
